--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,11 @@
 .App {
   text-align: center;
+  height: 100vh;
+  width: 100vw;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
 .App-logo {
@@ -26,6 +32,32 @@
 
 .App-link {
   color: #61dafb;
+}
+
+.pad{
+  height: 600px;
+  width: 400px;
+  display: flex;
+  justify-content: center;
+  border: 1px black solid;
+  flex-wrap: wrap;
+}
+
+.pad2{
+  height: 100px;
+  width: 400px;
+  display: flex;
+  justify-content: center;
+  border: 1px black solid;
+  flex-wrap: wrap;
+}
+
+.but{
+  height: 100px;
+  width: 100px;
+  border: 1px black solid;
+  cursor: pointer;
+  
 }
 
 @keyframes App-logo-spin {
